syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;

option go_package = "microservices/pb";

service ProductService {
  rpc FindProduct(ProductRequest) returns (ProductResponse) {}
}

message ProductRequest { string id = 1; }

message ProductResponse {
  string id = 1;
  string title = 2;
  int32 price = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
  google.protobuf.Timestamp deletedAt = 6;
}